aws/demo/2-vs-petclinic-oidc.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      options:
        extauth:
          configRef:
            name: keycloak-oidc
            namespace: gloo-system
      routeAction:
        single:
          upstream:
            name: default-petclinic-8080
            namespace: gloo-system
